process pipeline statusses as they run and send to sensemaker via rabbitmq and process them there